update bottom navbar

--- a/templates/snippets/logged_in_nav.html
+++ b/templates/snippets/logged_in_nav.html
@@ -11,6 +11,10 @@
                     class="fas fa-cog"></i>&nbsp;&nbsp;Admin</a>
         </li>
         {% endif %}
+        <!-- <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{{url_for('MainView:profile')}}">&nbsp;<i
+                    class="fas fa-user"></i>&nbsp;&nbsp;Profile</a>
+        </li> -->
         <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{{url_for('AuthView:logout_auth')}}">&nbsp;<i
                     class="fas fa-sign-out"></i>&nbsp;&nbsp;Logout</a>
