--- a/templates/base.html
+++ b/templates/base.html
@@ -48,8 +48,8 @@
         </div>
         {% endif %}
         {% block body %}{% endblock %}
+        {% block bottom_nav %}{% endblock %}
     </div>
-    <!-- <div class="fixed-bottom">...</div> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
