--- a/templates/base.html
+++ b/templates/base.html
@@ -40,9 +40,9 @@
 </nav>
 
 <body>
-    <div class="container pt-2 pb-2">
+    <div class="container pb-2">
         {% if message %}
-        <div class="mb-0 alert shadow alert-warning alert-dismissible fade show" role="alert">
+        <div class="mb-0 mt-2 alert shadow alert-warning alert-dismissible fade show" role="alert">
             {{ message }}
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
