update admin page and update function

--- a/templates/snippets/add_update.html
+++ b/templates/snippets/add_update.html
@@ -40,7 +40,7 @@
     {% endif %}
     {% if word_dict %}
     <h5>Update a word:</h5>
-    <form class="d-flex" action="{{ url_for('UpdatePasswordView') }}">
+    <form class="d-flex" action="{{ url_for('AuthView:update_password_auth') }}">
         <label class="w-100 mt-2">
             <input type="hidden" name="word_id" value="{{word_dict['_id']}}">
             <div class="input-group mb-3 shadow-sm">
