--- a/templates/snippets/logged_in_nav.html
+++ b/templates/snippets/logged_in_nav.html
@@ -5,7 +5,7 @@
 </button>
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        {% if session["username"] == 'gokasci' %}
+        {% if session["admin"] %}
         <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{{url_for('admin.index')}}">&nbsp;<i
                     class="fas fa-cog"></i>&nbsp;&nbsp;Admin</a>
