update search strategy

--- a/templates/snippets/logged_in_nav.html
+++ b/templates/snippets/logged_in_nav.html
@@ -21,7 +21,7 @@
         </li>
     </ul>
     <form class="d-flex" action="{{url_for('WordView:search')}}">
-        <input class="form-control me-2 shadow-sm" name="word" type="search" placeholder="Word" aria-label="Search"
+        <input class="form-control me-2 shadow-sm" name="search_term" type="search" placeholder="Word" aria-label="Search"
             required>
         <button class="btn btn-warning shadow-sm" type="submit">Search</button>
     </form>
