--- a/templates/word.html
+++ b/templates/word.html
@@ -201,7 +201,7 @@
     document.onkeydown = (e) => {
 
         var code = e.keyCode || e.which;
-        console.log(code)
+        // console.log(code)
         switch (code) {
             case 37: // left
                 $("#prev-word").click();
