--- a/templates/index.html
+++ b/templates/index.html
@@ -59,8 +59,11 @@
 <!-- {{words}} -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
 <script>
+
+    $(() => {
+        getCounts()
+    });
 
     shuffleStudy = () => {
 
