--- a/templates/words.html
+++ b/templates/words.html
@@ -96,6 +96,11 @@
 
 <script>
 
+    $(() => {
+        var type = '{{type}}'
+        getCounts(type)
+    });
+
     shuffleStudy = () => {
 
         var formInfo = document.forms['shuffle-study'];
