--- a/templates/words.html
+++ b/templates/words.html
@@ -13,12 +13,10 @@
 
 <div class="row justify-content-md-center">
     <div class="col-md-8 col-lg-6 p-3">
-        {% if type=="Search" %}
-        <h5 class="mb-3">{{type.title()}}:</h5>
+        {% if type in ["Search", "Add sentence"] %}
+        <h5 class="mb-3">{{type|cap}}:</h5>
         {% else %}
-        <h5 class="mb-3">{{type.title()}}s:</h5>
-        {% endif %}
-        {% if not type=="Search" %}
+        <h5 class="mb-3">{{type|cap}}s:</h5>
         <form action="{{url_for('WordView:get_word')}}" id="shuffle-study">
             <div class="input-group mb-2 shadow-sm">
                 <input type="hidden" name="shuffle_words" value="" />
@@ -34,11 +32,8 @@
                         class="fas fa-random"></i>&nbsp;&nbsp;Study</button>
             </div>
         </form>
-        {% endif %}
-        {% if not type=="Search" %}
-        <button onclick="location.href=`{{url_for('MainView:index')}}`"
-            class="btn-lg shadow-sm btn btn-warning mb-2 w-100"><i class="fas fa-plus"></i>&nbsp;&nbsp;Add new
-            word</button>
+        <div class="mb-1">{% include 'snippets/add_update_button.html' %}</div>
+
         {% endif %}
         {% if not words %}
         <span>No words</span>
@@ -53,7 +48,7 @@
                     {% if word['type'] == 'noun' %}{{word['artikel']}}{% endif %} {{word['word']}}
                 </button>
                 {% if session['user_id'] %}
-                <button onclick="location.href=`{{url_for('WordView:update_word_redirect', word_id=word['_id'])}}`"
+                <button onclick="location.href=`{{url_for('WordView:update_word_redirect', update=True, word_id=word['_id'])}}`"
                     class="btn btn-warning"><i class="fas fa-pencil-alt"></i></button>
 
                 <button type="button" class="btn btn-danger" data-bs-toggle="modal"
