--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,17 @@
 {% extends 'base.html' %}
 
-{% block title %}Types{% endblock %}
+{% block title %}German Words{% endblock %}
 
 {% block body %}
 
 
 <div class="row p-2 justify-content-md-center">
-    {% if not word_dict %}
-    <div class="col-md-5 col-lg-5 mb-2 p-0">
+    <div class="col-sm-12 mb-2 p-0">
         <div class="p-3 card shadow">
             <h5 class="mb-3">Study:</h5>
             {% if not types %}
             <span>No words</span>
-            {% endif %}
-
-            {% if types %}
+            {% else %}
             <form action="{{url_for('WordView:get_word')}}" id="shuffle-study">
                 <div class="input-group mb-2 shadow-sm">
                     <input type="hidden" name="shuffle_words" value="" />
@@ -28,6 +25,11 @@
                     <button onclick="shuffleStudy()" class="btn-lg  btn btn-warning"><i
                             class="fas fa-random"></i>&nbsp;&nbsp;Study</button>
                 </div>
+            </form>
+            {% include 'snippets/add_update_button.html' %}
+            <form class="d-flex" action="{{url_for('WordView:get_words_without_sentence')}}">
+                <button type="submit" class="form-control btn-lg  btn btn-warning mb-2"><i
+                        class="fas fa-stream"></i>&nbsp;&nbsp;Add sentence</button>
             </form>
             {% endif %}
             {% for type in types %}
@@ -43,22 +45,23 @@
             {% endfor %}
         </div>
     </div>
-    <div class="col-md-1 col-lg-1">
-
-    </div>
-    {% endif %}
-
-    {% if session['user_id'] %}
-    <div class="card shadow p-3 col-md-6 col-lg-6">
-        {% include 'snippets/add_update.html' %}
-    </div>
-    {% endif %}
 </div>
 
 
 <!-- {{words}} -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+{% if word_dict %}
+<script>
+
+    $(() => {
+        addWordModal()
+    });
+
+</script>
+{% endif %}
+
 <script>
 
     $(() => {
