--- a/templates/snippets/add_update.html
+++ b/templates/snippets/add_update.html
@@ -81,7 +81,8 @@
                 <button type="button" onclick="upsertWord(true)" class="btn-lg btn btn-warning w-100"><i
                         class="fas fa-save"></i>&nbsp;&nbsp;Update</button>
             </div>
-            <button type="button" onclick="window.location.href = document.referrer;" class="btn-lg btn btn-danger w-100 mt-1">Close</button>
+            <button type="button" onclick="window.location.href = document.referrer;"
+                class="btn-lg btn btn-danger w-100 mt-1">Close</button>
         </label>
     </form>
     {% endif %}
