--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
 
 <div class="row p-2 justify-content-md-center">
-    <div class="col-sm-12 mb-2 p-0">
+    <div class="col-sm-12 col-md-6 col-lg-5 mb-2 p-0">
         <div class="p-3 card shadow">
             <h5 class="mb-3">Study:</h5>
             {% if not types %}
