--- a/templates/snippets/add_update.html
+++ b/templates/snippets/add_update.html
@@ -31,11 +31,11 @@
                 <input type="text" class="form-control" name="pronunciation" placeholder="Pronunciation">
             </div>
 
-            <div class="input-group shadow">
+            <div class="input-group shadow-sm">
                 <button type="button" onclick="upsertWord(false)" class="btn-lg btn btn-warning w-100"><i
                         class="fas fa-plus"></i>&nbsp;&nbsp;Add</button>
             </div>
-            <button type="button" data-bs-dismiss="modal" class="btn-lg btn btn-danger w-100 mt-1">Close</button>
+            <button type="button" data-bs-dismiss="modal" class="shadow-sm btn-lg btn btn-danger w-100 mt-1">Close</button>
         </label>
     </form>
     {% endif %}
@@ -77,12 +77,12 @@
                     value="{{word_dict['pronunciation']}}">
             </div>
 
-            <div class="input-group shadow">
+            <div class="input-group shadow-sm">
                 <button type="button" onclick="upsertWord(true)" class="btn-lg btn btn-warning w-100"><i
                         class="fas fa-save"></i>&nbsp;&nbsp;Update</button>
             </div>
             <button type="button" onclick="window.location.href = document.referrer;"
-                class="btn-lg btn btn-danger w-100 mt-1">Close</button>
+                class="shadow-sm btn-lg btn btn-danger w-100 mt-1">Close</button>
         </label>
     </form>
     {% endif %}
