--- a/templates/snippets/add_update_button.html
+++ b/templates/snippets/add_update_button.html
@@ -1,4 +1,4 @@
-<button onclick="addWordModal()" class="form-control btn-lg  btn btn-warning mb-1"><i
+<button onclick="addWordModal()" class="form-control btn-lg btn btn-outline-dark mb-1"><i
         class="fas fa-plus"></i>&nbsp;&nbsp;Add new word</button>
 
 <div class="modal fade" id="add-word-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
