--- a/templates/snippets/add_update.html
+++ b/templates/snippets/add_update.html
@@ -1,18 +1,18 @@
 <div class="mt-1">
     {% if not update %}
-    <h5>Add new word:</h5>
+    <h5>Add new word / phrase:</h5>
     <form class="d-flex" action="{{ url_for('WordView:add_update_word') }}">
         <label class="w-100 mt-2">
             <div class="input-group mb-3 shadow-sm">
                 {% include 'snippets/type_selector.html' %}
             </div>
 
-            <div class="artikel-selector-dev input-group mb-3 shadow-sm">
+            <div class="artikel-selector-div input-group mb-3 shadow-sm">
                 {% include 'snippets/artikel_selector.html' %}
             </div>
 
             <div class="input-group mb-3 shadow-sm">
-                <input id="word-name" type="text" class="form-control" name="word" placeholder="Word" required value="">
+                <input id="word-name" type="text" class="form-control" name="word" placeholder="Word / Phrase" required value="">
             </div>
 
             <div class="plural-input input-group mb-3 shadow-sm">
@@ -23,7 +23,7 @@
                 <textarea class="form-control" name="sentence" placeholder="German sentence"></textarea>
             </div>
 
-            <div class="input-group mb-3 shadow-sm">
+            <div class="sentence-eng-div input-group mb-3 shadow-sm">
                 <textarea class="form-control" name="sentence_eng" placeholder="English sentence"></textarea>
             </div>
 
@@ -35,7 +35,8 @@
                 <button type="button" onclick="upsertWord(false)" class="btn-lg btn btn-warning w-100"><i
                         class="fas fa-plus"></i>&nbsp;&nbsp;Add</button>
             </div>
-            <button type="button" data-bs-dismiss="modal" class="shadow-sm btn-lg btn btn-danger w-100 mt-1">Close</button>
+            <button type="button" data-bs-dismiss="modal"
+                class="shadow-sm btn-lg btn btn-danger w-100 mt-1">Close</button>
         </label>
     </form>
     {% endif %}
@@ -48,12 +49,12 @@
                 {% include 'snippets/type_selector.html' %}
             </div>
 
-            <div class="artikel-selector-dev input-group mb-3 shadow-sm">
+            <div class="artikel-selector-div input-group mb-3 shadow-sm">
                 {% include 'snippets/artikel_selector.html' %}
             </div>
 
             <div class="input-group mb-3 shadow-sm">
-                <input id="word-name" type="text" class="form-control" name="word" placeholder="Word" required
+                <input id="word-name" type="text" class="form-control" name="word" placeholder="Word / Phrase" required
                     value="{{word_dict['word']}}">
             </div>
 
@@ -67,7 +68,7 @@
                     placeholder="German sentence">{{word_dict['sentence']}}</textarea>
             </div>
 
-            <div class="input-group mb-3 shadow-sm">
+            <div class="sentence-eng-div input-group mb-3 shadow-sm">
                 <textarea class="form-control" name="sentence_eng"
                     placeholder="English sentence">{{word_dict['sentence_eng']}}</textarea>
             </div>
@@ -96,11 +97,19 @@
 <script>
     $(() => {
         $("#type-select").on('change', () => {
-            if ($("#type-select").val() === "noun") {
-                $(".artikel-selector-dev, .plural-input").removeClass("d-none")
-            } else {
-                $(".artikel-selector-dev, .plural-input").addClass("d-none")
+
+            switch ($("#type-select").val()) {
+                case 'noun':
+                    $(".artikel-selector-div, .plural-input").removeClass("d-none")
+                    break;
+                case 'phrase':
+                    $(".artikel-selector-div, .sentence-eng-div, .plural-input").addClass("d-none")
+                    break;
+                default:
+                    $(".artikel-selector-div, .plural-input").addClass("d-none")
+                    $(".sentence-eng-div").removeClass("d-none")
             }
+
         });
     })
 
@@ -134,7 +143,7 @@
                     window.location.href = document.referrer;
                 } else {
                     // addWordModal()
-                    window.location.reload(false); 
+                    window.location.reload(false);
                 }
 
             }
@@ -147,12 +156,19 @@
     $(() => {
         $("#type-select").val("{{word_dict['type']}}");
 
-        if ($("#type-select").val() !== "noun") {
-            $(".artikel-selector-dev").addClass("d-none")
-        } else {
-            $(".plural-input").removeClass("d-none")
-            $("#artikel-select").val("{{word_dict['artikel']}}");
+        switch ($("#type-select").val()) {
+            case 'noun':
+                $(".plural-input, .sentence-eng-div, .artikel-selector-div").removeClass("d-none")
+                $("#artikel-select").val("{{word_dict['artikel']}}");
+                break;
+            case 'phrase':
+                $(".sentence-eng-div, .artikel-selector-div").addClass("d-none")
+                break;
+            default:
+                $(".artikel-selector-div, .plural-input").addClass("d-none")
+                $(".sentence-eng-div").removeClass("d-none")
         }
+
     })
 </script>
 {% endif %}
