--- a/templates/snippets/add_update_button.html
+++ b/templates/snippets/add_update_button.html
@@ -1,5 +1,5 @@
 <button onclick="addWordModal()" class="form-control btn-lg btn btn-outline-dark mb-1"><i
-        class="fas fa-plus"></i>&nbsp;&nbsp;Add new word</button>
+        class="fas fa-plus"></i>&nbsp;&nbsp;Add new item</button>
 
 <div class="modal fade" id="add-word-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
     aria-labelledby="staticBackdropLabel" aria-hidden="true">
