--- a/templates/word.html
+++ b/templates/word.html
@@ -81,7 +81,7 @@
         {% include 'snippets/add_update_button.html' %}
 
         <div class="card shadow p-3 {{[word_dict['artikel'], word_dict['type']]|word_background}}">
-            <div onclick="showCard()">
+            <div>
                 <div class="lead {{word_dict['type']|word_text_color}}">{{word_dict["artikel"]}} {{word_dict["word"]}}
                 </div>
                 {% if word_dict["sentence"] %}
